Added date4j for correct processing of date periods (i.e. number of days from/to).  On branch master  Changes to be committed:
	modified:   .classpath
	modified:   .project
	modified:   .settings/org.eclipse.jdt.core.prefs
	new file:   .settings/org.eclipse.wst.common.project.facet.core.xml
	modified:   libs/android-support-v4.jar
	new file:   libs/date4j.jar
	modified:   res/layout/dateheader.xml
	modified:   src/com/stronans/android/agenda/support/DateInfo.java
	modified:   src/com/stronans/android/agenda/support/FormattedInfo.java

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="D:/Programming/Projects/Android/AgendaApp/libs/date4j.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
