--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,17 +33,17 @@
          a default label for all following components.  The syntax here is a
          reference to one of our string resources.-->
     <uses-sdk
-            android:minSdkVersion="14"
-            android:targetSdkVersion="17"/>
+        android:minSdkVersion="14"
+        android:targetSdkVersion="17"/>
 
     <uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_CALENDAR"></uses-permission>
 
     <!-- android:theme="@android:style/Theme.NoTitleBar" -->
     <application
-            android:label="@string/agenda_app"
-            android:icon="@drawable/swisswatch"
-            android:allowBackup="true">
+        android:label="@string/agenda_app"
+        android:icon="@drawable/swisswatch"
+        android:allowBackup="true">
 
         <!-- An Activity in the application - this is something the user
              can launch and interact with.  The "name" attribute is the
@@ -71,20 +71,23 @@
         <activity android:name=".activities.AddTask"></activity>
 
         <activity
-                android:name=".activities.About"
-                android:theme="@style/Theme.AboutDialog"></activity>
+            android:name=".activities.About"
+            android:theme="@style/Theme.AboutDialog"></activity>
         <activity
-                android:name=".activities.AgendaItemDisplay"
-                android:theme="@style/Theme.AboutDialog"></activity>
+            android:name=".activities.AgendaItemDisplay"
+            android:theme="@style/Theme.AboutDialog"></activity>
         <activity
-                android:name=".activities.DateHeaderDisplay"
-                android:theme="@style/Theme.AboutDialog"></activity>
+            android:name=".activities.DateHeaderDisplay"
+            android:theme="@style/Theme.AboutDialog"></activity>
         <activity
-                android:name=".activities.TaskItemDisplay"
-                android:theme="@style/Theme.AboutDialog"></activity>
+            android:name=".activities.TaskItemDisplay"
+            android:theme="@style/Theme.AboutDialog"></activity>
         <activity
-                android:name=".activities.TaskManagementDisplay"
-                android:theme="@style/Theme.AboutDialog"></activity>
+            android:name=".activities.TaskManagementDisplay"
+            android:theme="@style/Theme.AboutDialog"></activity>
+        <activity
+            android:name=".activities.TasksDisplay"
+            android:theme="@style/Theme.AboutDialog"></activity>
     </application>
 
 </manifest>
